app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-webapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: breetzi/webapp:0.0.2
        ports:
        - containerPort: 80
