service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: webapp-service
spec:
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9898
